Módulos mascotas, historial médico, citas y productos realizados, actualización del .yaml para la documentación
