# Backend/src/routes/index.ts
@@ -3,7 +3,9 @@ import authRoutes from "./auth.routes";
 import userRoutes from "./user.routes";
 import serviceRoutes from './service.routes';
 import productRoutes from './product.routes'
-
+import petRoutes from './pet.routes';
+import medicalRecordRoutes from './medicalRecord.routes';
+import appointmentRoutes from './appointment.routes';
 
 const router = Router();
 
@@ -11,5 +13,8 @@ router.use("/auth", authRoutes);
 router.use("/users", userRoutes);
 router.use('/services', serviceRoutes);
 router.use('/products', productRoutes);
+router.use('/pets', petRoutes);
+router.use('/medical-records', medicalRecordRoutes);
+router.use('/appointments', appointmentRoutes);
 
 export default router;
