# Backend/src/routes/product.routes.ts
@@ -6,13 +6,15 @@ import {
   updateProduct,
   deleteProduct,
 } from '../controllers/product.controller';
+import authenticateToken from '../middlewares/authenticateToken';
+import { authorizeRoles } from '../middlewares/authorizeRoles';
 
 const router = Router();
 
-router.get('/', getAllProducts);
-router.get('/:id', getProductById);
-router.post('/', createProduct);
-router.put('/:id', updateProduct);
-router.delete('/:id', deleteProduct);
+router.get('/', authenticateToken, getAllProducts);
+router.get('/:id', authenticateToken, getProductById);
+router.post('/', authenticateToken, authorizeRoles('Admin'), createProduct);
+router.put('/:id', authenticateToken, authorizeRoles('Admin'), updateProduct);
+router.delete('/:id', authenticateToken, authorizeRoles('Admin'), deleteProduct);
 
 export default router;
